kubernetes/template.ecm-filesave-api.deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecm-api-service
  namespace: ecm-filesave
spec:
  selector:
    app: ecm-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 7000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecm-api
  namespace: ecm-filesave
  labels:
    app: ecm-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: ecm-api
  template:
    metadata:
      labels:
        app: ecm-api
    spec:
      containers:
        - name: ecm-filesave-api
          image: ecm-filesave-api
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 7000
          readinessProbe:
            tcpSocket:
              port: 7000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 7000
          imagePullPolicy: IfNotPresent
      serviceAccountName: default
