kubernetes/template.ecm-filesave-api.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecm-api-ingress
  namespace: ecm-filesave
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  -  host: ecm-filesave.com
     http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ecm-api-service
            port:
              number: 8000
